--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -12,4 +12,5 @@
 /* Import page styles */
 @import './pages/home.css';
 @import './pages/calculator.css';
-@import './pages/login.css'; 
+@import './pages/login.css';
+@import './pages/otp-verification.css'; 
